--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -93,8 +93,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="catch_amalgamated.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="catch_amalgamated.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
